--- a/src/ComicBookShared/ComicBookShared.csproj
+++ b/src/ComicBookShared/ComicBookShared.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\BaseRepository.cs" />
+    <Compile Include="Data\ComicBookArtistsRepository.cs" />
+    <Compile Include="Data\ComicBooksRepository.cs" />
     <Compile Include="Data\Context.cs" />
     <Compile Include="Data\DatabaseInitializer.cs" />
     <Compile Include="Data\Repository.cs" />
